--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,9 @@
 body {
   margin: 0;
+  padding: 0;
+  border: none;
+  box-sizing: border-box;
   font-family: 'Roboto', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: #141414;
   height: 200vh;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
 }
